src/PascalSubsetParser.py
# Generated from PascalSubset.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PascalSubsetParser ( Parser ):

    grammarFileName = "PascalSubset.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "';'", "'.'", "'var'", "','", 
                     "':'", "'integer'", "'char'", "'boolean'", "'array'", 
                     "'['", "']'", "'of'", "'..'", "'function'", "'('", 
                     "')'", "'procedure'", "'begin'", "'end'", "':='", "'if'", 
                     "'then'", "'else'", "'for'", "'to'", "'do'", "'while'", 
                     "'repeat'", "'until'", "'Write'", "'WriteLn'", "'Read'", 
                     "'ReadLn'", "'='", "'<>'", "'<'", "'<='", "'>'", "'>='", 
                     "'+'", "'-'", "'or'", "'*'", "'/'", "'div'", "'mod'", 
                     "'and'", "'not'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "CHAR_LITERAL", "STRING", 
                      "ID", "INT", "WS", "COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_declarations = 1
    RULE_varDecl = 2
    RULE_varSection = 3
    RULE_type = 4
    RULE_arrayType = 5
    RULE_range = 6
    RULE_intRange = 7
    RULE_charRange = 8
    RULE_simpleType = 9
    RULE_funcDecl = 10
    RULE_procDecl = 11
    RULE_params = 12
    RULE_param = 13
    RULE_funcBody = 14
    RULE_procBody = 15
    RULE_mainBlock = 16
    RULE_statementList = 17
    RULE_statement = 18
    RULE_assignment = 19
    RULE_ifStatement = 20
    RULE_forStatement = 21
    RULE_whileStatement = 22
    RULE_repeatStatement = 23
    RULE_writeStatement = 24
    RULE_readStatement = 25
    RULE_funcCall = 26
    RULE_compoundStmt = 27
    RULE_arrayAccess = 28
    RULE_expr = 29
    RULE_simpleExpr = 30
    RULE_term = 31
    RULE_factor = 32

    ruleNames =  [ "program", "declarations", "varDecl", "varSection", "type", 
                   "arrayType", "range", "intRange", "charRange", "simpleType", 
                   "funcDecl", "procDecl", "params", "param", "funcBody", 
                   "procBody", "mainBlock", "statementList", "statement", 
                   "assignment", "ifStatement", "forStatement", "whileStatement", 
                   "repeatStatement", "writeStatement", "readStatement", 
                   "funcCall", "compoundStmt", "arrayAccess", "expr", "simpleExpr", 
                   "term", "factor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    CHAR_LITERAL=50
    STRING=51
    ID=52
    INT=53
    WS=54
    COMMENT=55
    BLOCK_COMMENT=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PascalSubsetParser.ID, 0)

        def mainBlock(self):
            return self.getTypedRuleContext(PascalSubsetParser.MainBlockContext,0)


        def EOF(self):
            return self.getToken(PascalSubsetParser.EOF, 0)

        def declarations(self):
            return self.getTypedRuleContext(PascalSubsetParser.DeclarationsContext,0)


        def getRuleIndex(self):
            return PascalSubsetParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = PascalSubsetParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(PascalSubsetParser.T__0)
            self.state = 67
            self.match(PascalSubsetParser.ID)
            self.state = 68
            self.match(PascalSubsetParser.T__1)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 294928) != 0):
                self.state = 69
                self.declarations()


            self.state = 72
            self.mainBlock()
            self.state = 73
            self.match(PascalSubsetParser.T__2)
            self.state = 74
            self.match(PascalSubsetParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalSubsetParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(PascalSubsetParser.VarDeclContext,i)


        def funcDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalSubsetParser.FuncDeclContext)
            else:
                return self.getTypedRuleContext(PascalSubsetParser.FuncDeclContext,i)


        def procDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalSubsetParser.ProcDeclContext)
            else:
                return self.getTypedRuleContext(PascalSubsetParser.ProcDeclContext,i)


        def getRuleIndex(self):
            return PascalSubsetParser.RULE_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarations" ):
                listener.enterDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarations" ):
                listener.exitDeclarations(self)




    def declarations(self):

        localctx = PascalSubsetParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 79
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4]:
                    self.state = 76
                    self.varDecl()
                    pass
                elif token in [15]:
                    self.state = 77
                    self.funcDecl()
                    pass
                elif token in [18]:
                    self.state = 78
                    self.procDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 81 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 294928) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varSection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalSubsetParser.VarSectionContext)
            else:
                return self.getTypedRuleContext(PascalSubsetParser.VarSectionContext,i)


        def getRuleIndex(self):
            return PascalSubsetParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)




    def varDecl(self):

        localctx = PascalSubsetParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(PascalSubsetParser.T__3)
            self.state = 85 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 84
                self.varSection()
                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==52):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PascalSubsetParser.ID)
            else:
                return self.getToken(PascalSubsetParser.ID, i)

        def type_(self):
            return self.getTypedRuleContext(PascalSubsetParser.TypeContext,0)


        def getRuleIndex(self):
            return PascalSubsetParser.RULE_varSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarSection" ):
                listener.enterVarSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarSection" ):
                listener.exitVarSection(self)




    def varSection(self):

        localctx = PascalSubsetParser.VarSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(PascalSubsetParser.ID)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 90
                self.match(PascalSubsetParser.T__4)
                self.state = 91
                self.match(PascalSubsetParser.ID)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(PascalSubsetParser.T__5)
            self.state = 98
            self.type_()
            self.state = 99
            self.match(PascalSubsetParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayType(self):
            return self.getTypedRuleContext(PascalSubsetParser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return PascalSubsetParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = PascalSubsetParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.match(PascalSubsetParser.T__6)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(PascalSubsetParser.T__7)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.match(PascalSubsetParser.T__8)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 104
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def range_(self):
            return self.getTypedRuleContext(PascalSubsetParser.RangeContext,0)


        def simpleType(self):
            return self.getTypedRuleContext(PascalSubsetParser.SimpleTypeContext,0)


        def getRuleIndex(self):
            return PascalSubsetParser.RULE_arrayType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayType" ):
                listener.enterArrayType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayType" ):
                listener.exitArrayType(self)




    def arrayType(self):

        localctx = PascalSubsetParser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arrayType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(PascalSubsetParser.T__9)
            self.state = 108
            self.match(PascalSubsetParser.T__10)
            self.state = 109
            self.range_()
            self.state = 110
            self.match(PascalSubsetParser.T__11)
            self.state = 111
            self.match(PascalSubsetParser.T__12)
            self.state = 112
            self.simpleType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intRange(self):
            return self.getTypedRuleContext(PascalSubsetParser.IntRangeContext,0)


        def charRange(self):
            return self.getTypedRuleContext(PascalSubsetParser.CharRangeContext,0)


        def getRuleIndex(self):
            return PascalSubsetParser.RULE_range

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange" ):
                listener.enterRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRange" ):
                listener.exitRange(self)




    def range_(self):

        localctx = PascalSubsetParser.RangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_range)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [53]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.intRange()
                pass
            elif token in [50]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.charRange()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntRangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(PascalSubsetParser.INT)
            else:
                return self.getToken(PascalSubsetParser.INT, i)

        def getRuleIndex(self):
            return PascalSubsetParser.RULE_intRange

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntRange" ):
                listener.enterIntRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntRange" ):
                listener.exitIntRange(self)




    def intRange(self):

        localctx = PascalSubsetParser.IntRangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_intRange)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(PascalSubsetParser.INT)
            self.state = 119
            self.match(PascalSubsetParser.T__13)
            self.state = 120
            self.match(PascalSubsetParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CharRangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHAR_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(PascalSubsetParser.CHAR_LITERAL)
            else:
                return self.getToken(PascalSubsetParser.CHAR_LITERAL, i)

        def getRuleIndex(self):
            return PascalSubsetParser.RULE_charRange

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCharRange" ):
                listener.enterCharRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCharRange" ):
                listener.exitCharRange(self)




    def charRange(self):

        localctx = PascalSubsetParser.CharRangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_charRange)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(PascalSubsetParser.CHAR_LITERAL)
            self.state = 123
            self.match(PascalSubsetParser.T__13)
            self.state = 124
            self.match(PascalSubsetParser.CHAR_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PascalSubsetParser.RULE_simpleType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleType" ):
                listener.enterSimpleType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleType" ):
                listener.exitSimpleType(self)




    def simpleType(self):

        localctx = PascalSubsetParser.SimpleTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_simpleType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 896) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PascalSubsetParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(PascalSubsetParser.TypeContext,0)


        def funcBody(self):
            return self.getTypedRuleContext(PascalSubsetParser.FuncBodyContext,0)


        def params(self):
            return self.getTypedRuleContext(PascalSubsetParser.ParamsContext,0)


        def declarations(self):
            return self.getTypedRuleContext(PascalSubsetParser.DeclarationsContext,0)


        def getRuleIndex(self):
            return PascalSubsetParser.RULE_funcDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)




    def funcDecl(self):

        localctx = PascalSubsetParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(PascalSubsetParser.T__14)
            self.state = 129
            self.match(PascalSubsetParser.ID)
            self.state = 130
            self.match(PascalSubsetParser.T__15)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==52:
                self.state = 131
                self.params()


            self.state = 134
            self.match(PascalSubsetParser.T__16)
            self.state = 135
            self.match(PascalSubsetParser.T__5)
            self.state = 136
            self.type_()
            self.state = 137
            self.match(PascalSubsetParser.T__1)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 294928) != 0):
                self.state = 138
                self.declarations()


            self.state = 141
            self.funcBody()
            self.state = 142
            self.match(PascalSubsetParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PascalSubsetParser.ID, 0)

        def procBody(self):
            return self.getTypedRuleContext(PascalSubsetParser.ProcBodyContext,0)


        def params(self):
            return self.getTypedRuleContext(PascalSubsetParser.ParamsContext,0)


        def declarations(self):
            return self.getTypedRuleContext(PascalSubsetParser.DeclarationsContext,0)


        def getRuleIndex(self):
            return PascalSubsetParser.RULE_procDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcDecl" ):
                listener.enterProcDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcDecl" ):
                listener.exitProcDecl(self)




    def procDecl(self):

        localctx = PascalSubsetParser.ProcDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_procDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(PascalSubsetParser.T__17)
            self.state = 145
            self.match(PascalSubsetParser.ID)
            self.state = 146
            self.match(PascalSubsetParser.T__15)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==52:
                self.state = 147
                self.params()


            self.state = 150
            self.match(PascalSubsetParser.T__16)
            self.state = 151
            self.match(PascalSubsetParser.T__1)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 294928) != 0):
                self.state = 152
                self.declarations()


            self.state = 155
            self.procBody()
            self.state = 156
            self.match(PascalSubsetParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalSubsetParser.ParamContext)
            else:
                return self.getTypedRuleContext(PascalSubsetParser.ParamContext,i)


        def getRuleIndex(self):
            return PascalSubsetParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)




    def params(self):

        localctx = PascalSubsetParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.param()
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 159
                self.match(PascalSubsetParser.T__4)
                self.state = 160
                self.param()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PascalSubsetParser.ID)
            else:
                return self.getToken(PascalSubsetParser.ID, i)

        def type_(self):
            return self.getTypedRuleContext(PascalSubsetParser.TypeContext,0)


        def getRuleIndex(self):
            return PascalSubsetParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = PascalSubsetParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(PascalSubsetParser.ID)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 167
                self.match(PascalSubsetParser.T__4)
                self.state = 168
                self.match(PascalSubsetParser.ID)
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 174
            self.match(PascalSubsetParser.T__5)
            self.state = 175
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(PascalSubsetParser.StatementListContext,0)


        def getRuleIndex(self):
            return PascalSubsetParser.RULE_funcBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncBody" ):
                listener.enterFuncBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncBody" ):
                listener.exitFuncBody(self)




    def funcBody(self):

        localctx = PascalSubsetParser.FuncBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_funcBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(PascalSubsetParser.T__18)
            self.state = 178
            self.statementList()
            self.state = 179
            self.match(PascalSubsetParser.T__19)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(PascalSubsetParser.StatementListContext,0)


        def getRuleIndex(self):
            return PascalSubsetParser.RULE_procBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcBody" ):
                listener.enterProcBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcBody" ):
                listener.exitProcBody(self)




    def procBody(self):

        localctx = PascalSubsetParser.ProcBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_procBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(PascalSubsetParser.T__18)
            self.state = 182
            self.statementList()
            self.state = 183
            self.match(PascalSubsetParser.T__19)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(PascalSubsetParser.StatementListContext,0)


        def getRuleIndex(self):
            return PascalSubsetParser.RULE_mainBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainBlock" ):
                listener.enterMainBlock(self)

        def exitRule(self, listener:ParseTreeListener):
